--- a/src/elements/ami-viewer-2d.html
+++ b/src/elements/ami-viewer-2d.html
@@ -104,6 +104,7 @@
         <div>I: [[mouseI]] J: [[mouseJ]] K: [[mouseK]] Val: [[mouseValue]]</div>
       </div>
       <div id="topRight" class="top right information">
+        <div>[[patientName]]</div>
         <div>[[patientID]] (age: [[patientAge]], dob: [[patientBirthdate]])</div>
         <div>[[studyDescription]]</div>
         <div>[[seriesDescription]]</div>
@@ -178,6 +179,9 @@
           patientID: {
             type: String,
           },
+          patientName: {
+            type: String,
+          },
           patientAge: {
             type: String,
           },
@@ -191,9 +195,6 @@
             type: String,
           },
           seriesDescription: {
-            type: String,
-          },
-          stackPatientID: {
             type: String,
           },
           sizeX: {
