Setup to develop some parts without needing the backend

--- a/src/elements/series-preview.html
+++ b/src/elements/series-preview.html
@@ -4,6 +4,10 @@
   <template>
 
     <style>
+      :host {
+        display: block;
+      }
+
       .previewContainer {
         height: 128px;
         width: 128px;
