--- a/src/my-icons.html
+++ b/src/my-icons.html
@@ -46,6 +46,19 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <g id="fullscreen-exit">
         <path d="M5 16h3v3h2v-5H5v2zm3-8H5v2h5V5H8v3zm6 11h2v-3h3v-2h-5v5zm2-11V5h-2v5h5V8h-3z"></path>
       </g>
+      <!-- http://alexraven.com/fun/icon-play/?set=layouts-outline -->
+      <g id="layout-0">
+        <path d="M96,1H4C2.343,1,1,2.343,1,4v18.4V96c0,1.657,1.343,3,3,3h92c1.657,0,3-1.343,3-3V22.4V4 C99,2.343,97.657,1,96,1z M7,7h86v12.4H7V7z M93,93H7V25.4h86V93z"></path>
+      </g>
+      <g id="layout-1">
+        <path d="M96,1H50H4C2.343,1,1,2.343,1,4v92c0,1.657,1.343,3,3,3h46h46c1.657,0,3-1.343,3-3V4C99,2.343,97.657,1,96,1 z M7,7h40v86H7V7z M93,93H53V7h40V93z"></path>
+      </g>
+      <g id="layout-2">
+        <path d="M96,1H50H4C2.343,1,1,2.343,1,4v92c0,1.657,1.343,3,3,3h46h46c1.657,0,3-1.343,3-3V50V4 C99,2.343,97.657,1,96,1z M93,47H53V7h40V47z M7,7h40v43v43H7V7z M93,93H53V53h40V93z"></path>
+      </g>
+      <g id="layout-3">
+        <path d="M96,1H50H4C2.343,1,1,2.343,1,4v46v46c0,1.657,1.343,3,3,3h46h46c1.657,0,3-1.343,3-3V50V4 C99,2.343,97.657,1,96,1z M93,47H53V7h40V47z M7,7h40v40H7V7z M7,53h40v40H7V53z M93,93H53V53h40V93z"></path>
+      </g>
     </defs>
   </svg>
 </iron-iconset-svg>
