--- a/src/gex-home.html
+++ b/src/gex-home.html
@@ -308,87 +308,114 @@
       </div>
       <div class="viewHead">
         <div draggable="true">
-            Make viewew fs
-            <paper-icon-button icon="icons:fullscreen" on-tap="changeFullscreenViewer"></paper-icon-button>
-          </div>
+          Make viewew fs
+          <paper-icon-button icon="icons:fullscreen" on-tap="changeFullscreenViewer"></paper-icon-button>
+        </div>
         <control-panel-2d
-          hidden$="[[activeGe]]"
+          hidden$="[[_hideControls(0, active)]]"
           collapse="{{collapse}}"
-          index="{{stackIndexBch}}"
-          interpolation="{{stackInterpolationBch}}"
-          intensity-auto="{{stackIntensityAutoBch}}"
-          intensity-min="[[stackIntensityMinBch]]"
-          intensity-max="[[stackIntensityMaxBch]]"
-          intensity-range="[[stackIntensityRangeBch]]"
-          max-index="[[stackMaxIndexBch]]"
-          orientation="{{orientationBch}}"
+          orientation="{{orientation0}}"
           window-width="{{stackWindowWidthBch}}"
           window-center="{{stackWindowCenterBch}}"
-          layout="{{layout}}"></control-panel-2d>
-
-
+          layout="{{layout}}"
+          annotations="{{annotations0}}"
+          controls="{{controls}}"></control-panel-2d>
         <control-panel-2d
-          hidden$="[[activeBch]]"
+          hidden$="[[_hideControls(1, active)]]"
           collapse="{{collapse}}"
-          index="{{stackIndexGe}}"
-          interpolation="{{stackInterpolationGe}}"
-          intensity-auto="{{stackIntensityAutoGe}}"
-          intensity-min="[[stackIntensityMinGe]]"
-          intensity-max="[[stackIntensityMaxGe]]"
-          intensity-range="[[stackIntensityRangeGe]]"
-          max-index="[[stackMaxIndexGe]]"
-          orientation="{{orientationGe}}"
-          window-width="{{stackWindowWidthGe}}"
-          window-center="{{stackWindowCenterGe}}"
-          layout="{{layout}}"></control-panel-2d>
+          orientation="{{orientation0}}"
+          window-width="{{stackWindowWidthBch}}"
+          window-center="{{stackWindowCenterBch}}"
+          layout="{{layout}}"
+          annotations="{{annotations1}}"
+          controls="{{controls}}"></control-panel-2d>
+        <control-panel-2d
+          hidden$="[[_hideControls(2, active)]]"
+          collapse="{{collapse}}"
+          orientation="{{orientation0}}"
+          window-width="{{stackWindowWidthBch}}"
+          window-center="{{stackWindowCenterBch}}"
+          layout="{{layout}}"
+          annotations="{{annotations2}}"
+          controls="{{controls}}"></control-panel-2d>
+        <control-panel-2d
+          hidden$="[[_hideControls(3, active)]]"
+          collapse="{{collapse}}"
+          orientation="{{orientation0}}"
+          window-width="{{stackWindowWidthBch}}"
+          window-center="{{stackWindowCenterBch}}"
+          layout="{{layout}}"
+          annotations="{{annotations3}}"
+          controls="{{controls}}"></control-panel-2d>
+
       </div>
 
       <div class="viewersC">
         <gex-layout-manager
+          active="[[active]]"
           layout="[[layout]]"
           fullscreen="[[fullscreen]]">
             <ami-viewer
               data-uid="0"
               slot="s0"
               empty
+              annotations="{{annotations0}}"
               index-max="100"
               on-enter-fullscreen="_onEnterFullscreen"
               on-exit-fullscreen="_onExitFullscreen"
+              on-activate="_onActivateRenderer"
+              on-deactivate="_onDeactivateRenderer"
               on-drop="_onDrop"
               on-dragenter="_onDragEnter"
-              on-dragleave="_onDragLeave"></ami-viewer>
+              on-dragleave="_onDragLeave"
+              on-dragover="_onDragOver"></ami-viewer>
             <ami-viewer
               data-uid="1"
               slot="s1"
               loading
+              annotations="{{annotations1}}"
               index="5"
               index-max="10"
               on-enter-fullscreen="_onEnterFullscreen"
               on-exit-fullscreen="_onExitFullscreen"
+              on-activate="_onActivateRenderer"
+              on-deactivate="_onDeactivateRenderer"
               on-drop="_onDrop"
               on-dragenter="_onDragEnter"
-              on-dragleave="_onDragLeave"></ami-viewer>
+              on-dragleave="_onDragLeave"
+              on-dragover="_onDragOver"
+              ></ami-viewer>
             <ami-viewer
               data-uid="2"
               slot="s2"
               loaded
+              annotations="{{annotations2}}"
               index="50"
               index-max="100"
               on-enter-fullscreen="_onEnterFullscreen"
               on-exit-fullscreen="_onExitFullscreen"
+              on-activate="_onActivateRenderer"
+              on-deactivate="_onDeactivateRenderer"
               on-drop="_onDrop"
               on-dragenter="_onDragEnter"
-              on-dragleave="_onDragLeave"></ami-viewer>
+              on-dragleave="_onDragLeave"
+              on-dragover="_onDragOver"
+              ></ami-viewer>
             <ami-viewer
               data-uid="3"
               slot="s3"
               drag
+              annotations="{{annotations3}}"
               index-max="10"
               on-enter-fullscreen="_onEnterFullscreen"
               on-exit-fullscreen="_onExitFullscreen"
+              on-activate="_onActivateRenderer"
+              on-deactivate="_onDeactivateRenderer"
               on-drop="_onDrop"
               on-dragenter="_onDragEnter"
-              on-dragleave="_onDragLeave"></ami-viewer>
+              on-dragleave="_onDragLeave"
+              on-dragover="_onDragOver"
+              ></ami-viewer>
           <!-- dom repeat slot 4 elements-->
           <!-- shoud map data to elment here -->
         </gex-layout-manager>
@@ -630,6 +657,10 @@
             type: Number,
             value: 0,
           },
+          active: {
+            type: Number,
+            value: -1,
+          },
           fullscreen: {
             type: Number,
             value: -1,
@@ -637,6 +668,11 @@
           fullscreenViewer: {
             type: Boolean,
             value: false,
+          },
+          datasets: {
+            type: Array,
+            value: [],
+            observer: '_datasetsChanged',
           },
         };
       }
@@ -1323,15 +1359,135 @@
        * @param {*} event
        */
       _onDrop(event) {
+        event.preventDefault();
+        //
+        event.target.drag = false;
+        // alway load same data for now
+        const t1 = [
+    '36747136', '36747150', '36747164', '36747178',
+    '36747192', '36747206', '36747220', '36747234', '36747248', '36747262',
+    '36747276', '36747290', '36747304', '36747318', '36747332', '36747346',
+    '36747360', '36747374', '36747388', '36747402', '36747416', '36747430',
+    '36747444', '36747458', '36747472', '36747486', '36747500', '36747514',
+    '36747528', '36747542', '36747556', '36747570', '36747584', '36747598',
+    '36747612', '36747626', '36747640', '36747654', '36747668', '36747682',
+    '36747696', '36747710', '36747724', '36747738', '36747752', '36747766',
+    '36747780', '36747794', '36747808', '36747822', '36747836', '36747850',
+    '36747864', '36747878', '36747892', '36747906', '36747920', '36747934',
+    '36747948', '36747962', '36747976', '36747990', '36748004', '36748018',
+    '36748032', '36748046', '36748060', '36748074', '36748088', '36748102',
+    '36748116', '36748130', '36748144', '36748158', '36748172', '36748186',
+    '36748578', '36748592',
+    '36748606', '36748620', '36748634', '36748648', '36748662', '36748676',
+    '36748690', '36748704', '36748718', '36748732', '36748746', '36748760',
+    '36748774', '36748788', '36748802', '36748816', '36748830', '36748844',
+    '36748858', '36748872', '36748886', '36748900', '36748914', '36748928',
+    '36748942', '36748956', '36748970', '36748984', '36748998', '36749012',
+    '36749026', '36749040', '36749054', '36749068', '36749082', '36749096',
+    '36749110', '36749124', '36749138', '36749152', '36749166', '36749180',
+    '36749194', '36749208', '36749222', '36749236', '36749250', '36749264',
+    '36749278', '36749292', '36749306', '36749320', '36749334', '36749348',
+    '36749362', '36749376', '36749390', '36749404', '36749418',
+    '36749446', '36749460', '36749474', '36749488', '36749502', '36749516',
+    '36749530', '36749544', '36749558', '36749572', '36749586', '36749600',
+    '36749614', '36749628', '36749642', '36749656', '36749670', '36749684',
+    '36749698', '36749712', '36749726', '36749740', '36749754', '36749768',
+    '36749782', '36749796', '36749810', '36749824', '36749838', '36749852',
+    '36749866', '36749880', '36749894', '36749908', '36749922', '36749936',
+    '36749950', '36749964',
+];
+
+const images = t1.map(function(v) {
+    return 'https://cdn.rawgit.com/FNNDSC/data/master/dicom/adi_brain/' + v;
+  });
+
+// const targetViewerUID = event.target.dataset.uid;
+const targetViewer = event.target;
+targetViewer.images = images;
+
+console.log(targetViewer);
+        console.log(images);
         console.log(event.target.dataset.uid);
+        //
+        // const scene = {
+        //   layout: 1,
+        //   fullscreen: -1,
+        //   viewers: [
+        //     {
+        //       id: 0,
+        //       images: [],
+        //       annotation: 0,
+        //       controls: 'default',
+        //       windowLevel: 'default',
+        //       windowWidth: 100,
+        //       windowCenter: 0,
+        //       index: 0,
+        //     },
+        //     {
+        //       id: 1,
+        //       images: [],
+        //       annotation: 0,
+        //       controls: 'default',
+        //       windowLevel: 'default',
+        //       windowWidth: 100,
+        //       windowCenter: 0,
+        //       index: 0,
+        //     },
+        //     {
+        //       id: 2,
+        //       images: [],
+        //       annotation: 0,
+        //       controls: 'default',
+        //       windowLevel: 'default',
+        //       windowWidth: 100,
+        //       windowCenter: 0,
+        //       index: 0,
+        //     },
+        //     {
+        //       id: 3,
+        //       images: [],
+        //       annotation: 0,
+        //       controls: 'default',
+        //       windowLevel: 'default',
+        //       windowWidth: 100,
+        //       windowCenter: 0,
+        //       index: 0,
+        //     },
+        //   ],
+        // };
+
+        // load the data
+        // update images of the viewer
+        // viewr loads it
+        // store it in a queue
+        // reference this data to viewer somehow
+        // const dataset = {
+        //   annotation: 2,
+        //   controls: 'default',
+        //   windowLevel: 'default',
+        //   windowCenter: 0,
+        //   windowWidth: 100,
+        //   index: 0,
+        //   id: '1234', // index may be enoug
+        //   images: [],
+        //   viewers: [0, 1, 2]
+        // };
+        // this.datasets.push();
       }
 
       _onDragEnter(event) {
+        event.preventDefault();
         console.log(event.target.dataset.uid);
         event.target.drag = true;
       }
 
+      _onDragOver(event) {
+        event.preventDefault();
+        console.log(event.target.dataset.uid);
+      }
+
       _onDragLeave(event) {
+        event.preventDefault();
         event.target.drag = false;
         console.log(event.target.dataset.uid);
       }
@@ -1339,10 +1495,21 @@
       _onEnterFullscreen(event) {
         console.log(event.target.dataset.uid);
         this.fullscreen = event.target.dataset.uid;
+        this.active = this.fullscreen;
       }
 
       _onExitFullscreen() {
         this.fullscreen = -1;
+      }
+
+      _onActivateRenderer(event) {
+        console.log('activate');
+        this.active = event.target.dataset.uid;
+      }
+
+      _onDeactivateRenderer(event) {
+        console.log('deactivate');
+        this.active = -1;
       }
 
       changeFullscreenViewer() {
@@ -1353,6 +1520,19 @@
           console.log(this.$.fullViewer);
           this.$.fullViewer.webkitRequestFullScreen();
         }
+      }
+
+      _hideControls(current, target) {
+        if (Number(current) === 0 && Number(target) === -1) {
+          return false;
+        }
+
+        return (Number(current) !== Number(target));
+      }
+
+      _datasetsChanged(previous, next) {
+        console.log(previous);
+        console.log(next);
       }
     }
 
